# DataFactory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PROVIDER_ROUTING_README.md  README.md  README.zh-CN.md  app.py  config.docker.json  docker-compose.yml  docker.env.example  download_offline_libs.sh  package.json  pyproject.toml  requirements.txt  update_paths.py  webpack.config.js
backend/: app.py
backend/config/: config_templates.py
backend/manager/: __init__.py  agent_task_manager.py  kgqa_manager.py  knowledge_graph_manager.py  langchain_graph_qa.py  model_manager.py  qa_manager.py  vanna_manager.py
backend/models/: kg_qa_models.py  knowledge_graph_models.py  qa_models.py
backend/routes/: agent_api.py  data_import_routes.py  database_routes.py  kg_qa_routes.py  knowledge_graph_routes.py  qa_routes.py  settings_routes.py
backend/services/: enhanced_vanna_models.py  model_service.py  vanna_new_class.py  vanna_service.py
backend/utils/: db_utils.py  openai_compat.py  token_tracking.py
docker/: README-Docker.md  README-Neo4j-Fix.md  docker.env.example  neo4j-offline-setup.sh  test-network-build.sh
docker/neo4j/: .dockerignore  Dockerfile
docker/scripts/: process_config.py  wait-for-services.sh
src/js/: d3-helper.js  main.js
templates/: data_decision.html  data_import.html  database_management.html  database_qa.html  index.html  knowledge_graph_construction.html  knowledge_graph_metrics.html  knowledge_graph_qa.html  knowledge_graph_visualization.html  layout.html  settings.html
test/: kg_rag_graph_test.py  kg_rag_test.py  vn_flask_test.py
(+10 files in other folders)
